# olip

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
olip/: __init__.py  crypto_engine.py  guardian_interface.py  recovery_manager.py  trust_engine.py
olip/olip/.github/ISSUE_TEMPLATE/: bug_report.md
scripts/: demo.py
tests/: test_olip.py
